--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div id="valor-actual"></div>
             </div>
             <button class="col-2" onclick="display.borrarTodo()">C</button>
-            <button onclick="display.borrar()">&larr;</button>
+            <button class="operador" onclick="display.borrar()">&larr;</button>
             <button class="operador" value="dividir">%</button>
             <button class="numero">7</button>
             <button class="numero">8</button>
