--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora</title>
     <link href="https://fonts.googleapis.com/css2?family=Fraunces&display=swap" rel="stylesheet">
-    <link href="index.css" rel="stylesheet" />
+    <link href="style.css" rel="stylesheet" />
     <script src="Display.js" type="text/javascript"></script>
     <script src="Calculadora.js" type="text/javascript"></script>
     <script src="index.js" type="text/javascript" defer></script>
@@ -17,7 +17,7 @@
                 <div id="valor-anterior"></div>
                 <div id="valor-actual"></div>
             </div>
-            <button class="col-2" onclick="display.borrarTodo()">C</button>
+            <button class="colm2 operador" onclick="display.borrarTodo()">C</button>
             <button class="operador" onclick="display.borrar()">&larr;</button>
             <button class="operador" value="dividir">%</button>
             <button class="numero">7</button>
@@ -32,7 +32,7 @@
             <button class="numero">2</button>
             <button class="numero">3</button>
             <button class="operador" value="sumar">+</button>
-            <button class="col-2 numero">0</button>
+            <button class="colm2 numero">0</button>
             <button class="numero">.</button>
             <button class="operador" value="igual">=</button>
         </div>
