--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +11,7 @@
     <script src="Calculadora.js" type="text/javascript"></script>
     <script src="index.js" type="text/javascript" defer></script>
 </head>
+
 <body>
     <div class="container">
         <div class="calculadora">
@@ -23,7 +25,7 @@
             <button class="numero">7</button>
             <button class="numero">8</button>
             <button class="numero">9</button>
-            <button class="operador" value="multiplicar">X</button>
+            <button class="operador" value="multiplicar">x</button>
             <button class="numero">4</button>
             <button class="numero">5</button>
             <button class="numero">6</button>
@@ -38,4 +40,5 @@
         </div>
     </div>
 </body>
+
 </html>
